Assigned dark theme colors. Fix some layout bugs

--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -40,7 +40,7 @@
 }
 
 .toggler__circle {
- background-color: var(--color-alternate);
+ background-color: var(--color-secondary);
  height: 24px;
  width: 24px;
  border-radius: 50%;
@@ -83,7 +83,7 @@
  border: 1px solid var(--accent-primary);
  height: 24px;
  width: 24px;
- background-color: var(--bg-primary);
+ /*background-color: var(--bg-primary);*/
  transform: translateX(23px);
 }
 
