--- a/components/card/card.css
+++ b/components/card/card.css
@@ -15,6 +15,7 @@
 
 .card__header {
  padding: 25px 25px 38px;
+ color: var(--title-secondary);
 }
 
 .card__title {
