--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,6 +1,7 @@
 .header {
  color: var(--color-primary);
  padding: 24px 0 40px;
+ background: var(--bg-primary);
 }
 
 .header__top-level {
@@ -47,21 +48,19 @@
 }
 
 .header__nav-item:focus {
- /*color: var(--link-active-secondary);*/
  text-decoration: underline;
  list-style: none;
  outline: none;
 }
 
 .header__nav-item:hover {
- /*color: var(--link-active-secondary);*/
+ color: var(--link-active-secondary);
  text-decoration: underline;
 }
 
 @media screen and (max-width: 768px) {
  .header__title {
   color: var(--title-alternate);
-  /* h3 */
   font-family: Inter, sans-serif;
   font-size: 42px;
   font-style: normal;
