--- a/components/preview/preview.css
+++ b/components/preview/preview.css
@@ -2,6 +2,7 @@
  padding-top: 65px;
  padding-bottom: 65px;
  background-color: var(--bg-alternate);
+ height: 100%;
 }
 
 .preview__wrapper {
@@ -9,6 +10,7 @@
  flex-wrap: wrap;
  gap: 30px;
  justify-content: center;
+ height: 100%;
 }
 
 /**
