--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -1,4 +1,5 @@
 .tabs {
+ height: 100%;
 }
 
 .tabs__input {
@@ -43,6 +44,7 @@
 
 .tabs__content {
  display: none;
+ height: 100%;
 }
 
 .tabs__content_all {
@@ -68,7 +70,7 @@
 .tabs__input_elementary:focus ~ .tabs__scroller .tabs__label_elementary,
 .tabs__input_simple:focus ~ .tabs__scroller .tabs__label_simple,
 .tabs__input_complex:focus ~ .tabs__scroller .tabs__label_complex {
- color: var(--color-primary);
+ color: var(--link-active-secondary);
 }
 
 .tabs__input_all:checked ~ .tabs__scroller .tabs__label_all,
